desde el fork de rafa

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>HTML5 Pacman albert</title>
+    <title>HTML5 Pacman albert del fork de rafa</title>
     
     <style type="text/css">
       @font-face {
